[tool.poetry]
name = "backend"
version = "0.1.0"
description = ""
authors = ["Renan Santana <renan_ota@hotmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
fastapi = "^0.75.0"
uvicorn = "^0.17.6"
peewee = "^3.14.10"
psycopg-binary = "^3.0.10"

[tool.poetry.dev-dependencies]
black = "^22.1.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
